# youdaonote-pull

./: .gitignore  GUI_使用说明.md  README.md  auto_extract_cookies.py  captured_api_requests.json  cookie_helper.html  cookies.json  download_notes.py  extract_cookies.js  list_notes.py  pyproject.toml  requirements.txt  search_and_pull.py  update_cookies.py
config/: config.json
docs/: api-analysis.md
gui/: README.md  start_gui.py  youdao_gui.py  启动GUI.bat  如何获取Cookies.md
test/: test.py  test_sync.py
tools/: __init__.py  auto_extract_cookies.py  capture_api.py  playwright_login.py  scan_duplicates.py  update_cookies.py
youdaonote/: __init__.py  __main__.py  api.py  common.py  cookies.py  covert.py  dedup.py  download.py  git_helper.py  gui.py  image.py  log.py  md_to_note.py  search.py  sync.py  sync_metadata.py  upload.py  watcher.py
